# fastapi-blog

./: .env copy  .gitignore  README.md  annotations.md  posts_db.db  pyproject.toml  sql.sql
src/: .env copy  app.py  config.py  database.py  models.py  schemas.py
src/alembic/: env.py
src/alembic/versions/: 1580b73e9b76_add_likes_to_posts.py  f48f0371f87a_initial_schema.py
src/database/: database.py
src/db/: db.py
src/models/: models.py  order.py
src/repositories/: order_repository.py
src/routes/: orders_routes.py  post.py  post_routes.py  user.py  user_routes.py
src/schemas/: order_schema.py  post.py  post_schemas.py  product_schema.py  user.py  user_schemas.py
src/services/: order_service.py
src/static/css/: main.css
src/templates/: error.html  index.html  layout.html  post_detail.html
src/templates/email/: password_reset.html
src/utils/: auth.py  email.py  image.py
