[project]
name = "fastapi-blog"
version = "0.1.0"
description = "API for my FastAPI's Blog "
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosmtplib>=5.1.0",
    "aiosqlite>=0.22.1",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "bcrypt==5.0.0",
    "click==8.3.1",
    "dnspython==2.8.0",
    "ecdsa==0.19.1",
    "email-validator==2.3.0",
    "fastapi[standard]==0.128.5",
    "greenlet==3.3.1",
    "h11==0.16.0",
    "idna==3.11",
    "pillow>=12.2.0",
    "psycopg2-binary==2.9.11",
    "pwdlib[argon2]>=0.3.0",
    "pyasn1==0.6.2",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings>=2.14.0",
    "pyjwt>=2.12.1",
    "python-dotenv==1.2.1",
    "python-jose==3.5.0",
    "python-multipart==0.0.22",
    "rsa==4.9.1",
    "six==1.17.0",
    "sqlalchemy==2.0.46",
    "sqlmodel==0.0.32",
    "starlette==0.52.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn==0.40.0",
]
